--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,8 +1,11 @@
+body{
+	line-height:1.6;
+}
 .notes,.notes-code {
     padding: 10px;
     background: #f5f5f5;
     border-radius: 5px;
-    margin: 10px;
+    margin-left: 10px;
 }
 .notes-code{
 	background:#2d2d2d;
@@ -34,4 +37,14 @@ h3,h2{
 	padding:2px 10px;
 	border-radius:5px;
 	font-weight: 600;
+}
+.btn{
+	min-width: 70px;
+	line-height:30px;
+	background:#09bab4;
+	color:#fff;
+	border: none;
+	border-radius:30px;
+	margin: 0px 5px;
+	outline: none;
 }
