--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -92,6 +92,11 @@ ul {
     content: '嵌套视图';
   }
 }
+.demo {
+  background: #fafafa;
+  padding: 16px;
+  border: 1px #e2e2e2 solid;
+}
 .DlHighlight {
   margin-left: 0px;
   margin-bottom: 25px;
